--- a/src/index.scss
+++ b/src/index.scss
@@ -22,8 +22,13 @@ a {
 
 body {
   font-family: $font-hei;
+  background: #f5f5f5;
   font-size: 16px;
   line-height: 1.2;
+}
+
+button {
+  font-family: inherit;
 }
 
 .icon {
